# MDSpanTest

./: .gitignore  CMakeLists.txt  DynamicTestsBase.hpp  DynamicTests_MdspanExtentIterator.cpp  DynamicTests_Ranges.cpp  README.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CodeQL.yaml  ci.yml  codeql.yml  dependency-review.yml  flawfinder.yml  msvc.yml  ossf-scorecard.yml
benchmark/: BenchmarkMain.cpp
include/: mdspan_extensions.hpp
test/: DynamicTestsBase.hpp  DynamicTests_Algorithms.cpp  DynamicTests_MdspanExtentIterator.cpp  DynamicTests_MdspanExtentView.cpp  DynamicTests_Ranges.cpp  StaticTests.hpp  StaticTests_MdspanExtentIterator.cpp  StaticTests_MdspanExtentView.cpp  TestMain.cpp
